# pybear

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  README.rst  Untitled.ipynb  conf.py  index.rst  output.html  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.github/workflows/: matrix-tests-py310+.yml  matrix-tests-py310.yml  matrix-tests-py311.yml  matrix-tests-py312.yml  matrix-tests-py313.yml  matrix-tests-py314.yml  matrix-tests-py38.yml  matrix-tests-py39.yml  matrix-tests.yml  matrix-tests_py310+.yml  pypi-publish  pypi-publish.yml  python-publish.yml  sphinx.yml  testpypi-publish.yml
_build/doctrees/: README.doctree  environment.pickle
_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: environment.pickle  index.doctree
_build/html/_sources/: README.rst.txt
benchmarking/: pizza
benchmarking/base/mixins/: FileDumpMixin.py
benchmarking/feature_extraction/text/: handling_rows_of_numbers.py  statistics.py  variable_finder.py  variable_finder_code_sample
benchmarking/model_selection/autogridsearch/: _autogridsearch_wrapper.py  sk_AutoGridSearch.py  sk_agscv__docstring_sandbox.py
benchmarking/new_numpy/: PIZZA_REVISIT_CONSTRUCTION_OF_SPARSE__NOTES_INSIDE  notes_about_setting_sparsity  random_choice.py  random_sparse.py
benchmarking/preprocessing/ColumnDeduplicateTransformer/: ColumnDeduplicateTransformer.py  pizza_scratch.py
benchmarking/utilities/: DictMenuPrint.py  array_sparsity.py  nan_mask.py  serial_index_mapper.py
docs/: generate_sitemap.py  requirements.txt
docs/source/: api.rst  api_base.rst  api_feature_extraction.rst  api_input_validation.rst  api_model_selection.rst  api_new_numpy.rst  api_preprocessing.rst  api_utilities.rst  build.rst  conf.py  dev.rst  index.rst  installation.rst  usage.rst
docs/source/_templates/: layout.html
pybear/: __init__.py  _version.py  base.py  import_check_pybear.py  new_numpy_random.py  pytest.ini
pybear/TO_DO/: CSVBase64RW.py  FUNCTION__PERMUTER.ipynb  FUNCTION__autogridsearch_wrapper.ipynb  create_random_sparse_numpy.py  new_np_random_choice.py  permuter.py
pybear/data_validation/: arg_kwarg_validater.py  validate_user_input.py
pybear/debug/: BEAR_THIS_debug_IS_MORE_CURRENT_THAN_PyCharmProjects  _IdentifyObjectAndPrint.py  _logger.py  _print_inspect_stack.py
pybear/model_selection/: __init__.py
pybear/model_selection__BEAR_FINISH/: 1_METRIC__gscv_bad_X_bad_y_comparison_dump__score.ods  1_METRIC__gscv_bad_X_comparison_dump__all_except_score.ods  2_METRIC__gscv_bad_X_bad_y_comparison_dump__score.ods  2_METRIC__gscv_bad_X_comparison_dump__all_except_score.ods  ARRAY_1_METRIC__gscv_cv_results_comparison_dump.ods  ARRAY_2_METRIC__gscv_cv_results_comparison_dump.ods  ARRAY_2_METRIC__gscv_method_comparison_dump.ods  AutoGridSearchCV_PARENTS_ARGS_KWARGS.ods  AutoGridSearchThreshold__OLD.py  DF_1_METRIC__gscv_attr_comparison_dump.ods  DF_1_METRIC__gscv_method_comparison_dump.ods  FUNCTION__GridSearchThresholdCV.ipynb  GSTCV.py  GSTCV__CONSTRUCTION_AREA__ATTR_METHOD_CALL_RESPONSES.ipynb  GSTCV__SANDBOX__SPEED_UP_DASK.ipynb  GSTCV__X_y__VALIDATION.ipynb  autogridsearch_wrapper.py  gstcv_cv_results_builder__KEEP_UNTIL_GSTCV_IS_DONE.py
pybear/model_selection__PIZZA_FINISH/: __init__.py
pybear/new_numpy/: __init__.py  _random.py  _random_.py
pybear/persistence/: FUNCTION__PERSISTENCE__BASE64__TEXT.ipynb
pybear/preprocessing/: __init__.py  _data.py
pybear/sparse_dict/: __init__.py  _constructor.py  _linalg.py  _linalg_validation.py  _math.py  _random_.py  _utils.py  _validation.py  get_shape__bastardized_with_sparse_dict.py  scratch.py  sparse_dict.py
pybear/sparse_dict__BEFORE_BUTCHERY/: conftest.py  sparse_dict.py
pybear/tests/: test_is_classifier.py
pybear/utilities/: _array_sparsity.py  _get_methods_out_of_class.py
pybear/utils/: __init__.py  _array_sparsity.py  _benchmarking.py  _get_methods_out_of_class.py  _get_module_name.py  _permuter.py  _serial_index_mapper.py  _testing.py
requirements/: all_requirements.txt  dev_requirements.txt  project_requirements.txt  test_requirements.txt
src/pybear/: __init__.py  _version.py
tests/: Transformer_tests_2026_06.ods  get_feature_names_in_test.py  pybear_dep_whls_2026_06.ods
tests/base/: DictMenuPrint_test.py  cast_to_ndarray_12sec_test.py  cast_to_ndarray_test.py  check_1D_num_sequence_test.py  check_2D_num_array_test.py  check_2D_str_array_test.py  check_dtype_12sec_test.py  check_dtype_test.py  check_feature_names_test.py  check_is_finite_6sec_test.py  check_is_finite_test.py  check_is_fitted_test.py  check_n_features_in_test.py  check_nan_test.py  check_shape_test.py  check_sparse_test.py  conftest.py  copy_X_11sec_test.py  copy_X_13sec_test.py  ensure_2D_test.py  get_feature_names_out_test.py  get_feature_names_test.py  is_classifier_2min_7sec_test.py  is_fitted_test.py  mixin_attr_test.py  num_features_test.py  num_samples_test.py  set_order_test.py  validate_data_28sec_test.py  validate_data_test.py
tests/debug/: IdentifyObjectAndPrint_test.py  logger_test.py  print_inspect_stack_test.py
tests/new_numpy/: random_choice_test.py  random_sparse_class_test.py  random_sparse_test.py
tests/persistence/: OLD_NON_PYTEST_.py
tests/preprocessing/: conftest.py  conftest_X_factory_18sec_test.py
tests/utilities/: DictMenuPrint_test.py  array_sparsity_2sec_test.py  array_sparsity_test.py  check_is_fitted_test.py  column_name_mapper_test.py  conftest.py  feature_name_mapper_test.py  inf_masking_13sec_test.py  inf_masking_18sec_test.py  inf_masking_9sec_test.py  inf_masking_test.py  is_classifier_2min_7sec_test.py  is_fitted_test.py  nan_masking2_11sec_test.py  nan_masking2_5sec_test.py  nan_masking2_7sec_test.py  nan_masking_2_test.py  nan_masking_3sec_test.py  nan_masking_7sec_test.py  nan_masking_test.py  scipy_sparse_preslice_handle_test.py  serial_index_mapper_3sec_test.py  time_memory_benchmark_16sec_test.py  time_memory_benchmark_test.py  timer_2sec_test.py  view_text_snippet_5sec_test.py
(+3280 files in other folders)
