[tool.poetry]
name = "pybear"
version = "0.2.4"
description = "Python modules for miscellaneous data analytics applications"
license = "BSD-3-clause"
authors = ["Bill Sousa <WKSJR99@msn.com>"]
maintainers = ["Bill Sousa"]
readme = "README.rst"
homepage = "https://github.com/PylarBear/pybear"
repository = "https://github.com/PylarBear/pybear"
#documentation
keywords = ["python data analytics scikit-API text"]
#classifiers
packages = [
	{ include = "pybear", from = "src"}
]
include = [
    "LICENSE",
    "README.rst",
    "CHANGELOG.md",
    "tests"
]
#exclude


[tool.poetry.dependencies]
python = ">=3.10"
joblib = [
    {version = "==1.3.0", python = "<3.14"},
    {version = "==1.5.3", python = "==3.14"}   # check 1.5.2
]
numpy = [
    {version = "==2.1.0", python = "<3.14"},
    {version = "==2.3.2", python = "==3.14"}
]
pandas = [
    {version = "==2.2.3", python = "<3.14"},
    {version = "==2.3.3", python = "==3.14"}
]
polars = [
    {version = "==1.19.0", python = "<3.14"},
    {version = "==1.19.0", python = "==3.14"}
]
psutil = [
    {version = "==5.7.0", python = "<3.14"},
    {version = "==5.7.0", python = "==3.14"}
]
scipy = [
    {version = "==1.15.0,<1.16.0", python = "==3.10"},  # find lower bound for py3.10
    {version = "==1.16.1", python = ">=3.11,<=3.13"},
    {version = "==1.16.1", python = "==3.14"},
]
scikit-learn = [
    {version = "==1.5.2,<1.8.0", python = "==3.10"},  # find lower bound for py3.10
    {version = "==1.5.2", python = ">=3.11,<=3.13"},   # check starting at 1.6.0
    {version = "==1.8.0", python = "==3.14"}   # check starting at 1.6.0
]
typing_extensions = [
    {version = "==4.12.0", python = "<3.14"},
    {version = "==4.12.0", python = "==3.14"}
]


[tool.poetry.group.dev.dependencies]
docutils = ">=0.20"
jupyter = "*"
notebook = "*"
numpydoc = "*"
pyarrow = [
    {version = ">=18.0.0", python = "<3.14"},
    {version = ">=24.0.0", python = "==3.14"}
]
pydata-sphinx-theme = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-sitemap = "*"


[tool.poetry.group.test.dependencies]
pytest = [
    {version = "==7.0.0", python = "<3.14"},
    {version = "==8.0.0", python = "==3.14"}    # 7.0.0 does not work. check >7.0.0,<8.0.0
]
pytest-cov = "*"
pytest-html = "*"


[tool.poetry.extras]
# Optional dependencies. They can be opted into by apps.


[tool.poetry.scripts]


[tool.poetry.plugins]


[tool.poetry.urls]
Homepage = "https://github.com/PylarBear/pybear"
Documentation = "https://pybear.readthedocs.io/en/stable/"


[tool.coverage.run]
source = ["pybear"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


