[tool.poetry]
name = "pybear"
version = "0.2.4"
description = "Python modules for miscellaneous data analytics applications"
license = "BSD-3-clause"
authors = ["Bill Sousa <WKSJR99@msn.com>"]
maintainers = ["Bill Sousa"]
readme = "README.rst"
homepage = "https://github.com/PylarBear/pybear"
repository = "https://github.com/PylarBear/pybear"
#documentation
keywords = ["python data analytics scikit-API text"]
#classifiers
packages = [
	{ include = "pybear", from = "src"}
]
include = [
    "LICENSE",
    "README.rst",
    "CHANGELOG.md",
    "tests"
]
#exclude


[tool.poetry.dependencies]
python = ">=3.10"
joblib = [
    {version = "==1.3.0", python = "==3.10"},   # must be >= 1.3.0 for parallel_config
	{version = "==1.3.0", python = "==3.11"},   # must be >= 1.3.0 for parallel_config
	{version = "==1.3.0", python = "==3.12"},   # must be >= 1.3.0 for parallel_config
	{version = "==1.3.0", python = "==3.13"},   # must be >= 1.3.0 for parallel_config
    {version = "==1.5.1", python = "==3.14"}    # was 1.5.3
]
numpy = [
    {version = "==1.23.5", python = "==3.10"},   # was 2.1.0, 2.02 works
	{version = "==1.23.5", python = "==3.11"},   # was 2.1.0, 2.02 works
	{version = "==1.26.0", python = "==3.12"},   # was 2.1.0, 2.02 works... whatever this comes out to is done
	{version = "==2.1.0", python = "==3.13"},   # done
    {version = "==2.3.0", python = "==3.14"}    # was 2.3.1  keep this 2.3.1
]
pandas = [
    {version = "==1.3.0", python = "==3.10"},  # was 2.2.3, 2.2.2 works
	{version = "==1.3.0", python = "==3.11"},  # was 2.2.3, 2.2.2 works
	{version = "==2.1.1", python = "==3.12"},  # done
	{version = "==2.2.3", python = "==3.13"},  # 2.2.2 was working (???)
    {version = "==2.3.2", python = "==3.14"}  # was 2.3.3  keep this 2.3.3
]
polars = [
    {version = "==1.19.0", python = "==3.10"},  # really is done
	{version = "==1.19.0", python = "==3.11"},  # really is done
	{version = "==1.19.0", python = "==3.12"},  # really is done
	{version = "==1.19.0", python = "==3.13"},  # really is done
    {version = "==1.19.0", python = "==3.14"}  # was 1.19.0
]
psutil = [
    {version = "==5.7.0", python = "==3.10"},  # done
	{version = "==5.7.0", python = "==3.11"},  # done
	{version = "==5.7.0", python = "==3.12"},  # done
	{version = "==5.7.0", python = "==3.13"},  # done
    {version = "==5.7.0", python = "==3.14"}  # was 5.7.0
]
scipy = [
    {version = "==1.14.0,<1.16.0", python = "==3.10"},  # done
    {version = "==1.14.0,<1.16.0", python = "==3.11"},  # done
	{version = "==1.14.0,<1.16.0", python = "==3.12"},  # done
	{version = "==1.14.1,<1.16.0", python = "==3.13"},  # done
    {version = "==1.16.1", python = "==3.14"},  # was 1.16.1
]
scikit-learn = [
    {version = "==1.3.0,<1.8.0", python = "==3.10"},  # must be >=1.3.0, needs check_transformers_unfitted_stateless
    {version = "==1.3.0", python = "==3.11"},  # must be >=1.3.0, needs check_transformers_unfitted_stateless
	{version = "==1.3.0", python = "==3.12"},  # must be >=1.3.0, needs check_transformers_unfitted_stateless
	{version = "==1.4.0", python = "==3.13"},  # done
    {version = "==1.6.0", python = "==3.14"}  # was 1.8.0
]
typing_extensions = [
    {version = "==4.6.0", python = "==3.10"},  # was 4.12.0
	{version = "==4.6.0", python = "==3.11"},  # was 4.12.0
	{version = "==4.6.0", python = "==3.12"},  # was 4.12.0
	{version = "==4.6.0", python = "==3.13"},  # was 4.12.0
    {version = "==4.6.0", python = "==3.14"}  # was 4.12.0
]


[tool.poetry.group.dev.dependencies]
docutils = ">=0.20"
jupyter = "*"
notebook = "*"
numpydoc = "*"
pyarrow = [
    {version = ">=18.0.0", python = "==3.10"},
	{version = ">=18.0.0", python = "==3.11"},
	{version = ">=18.0.0", python = "==3.12"},
	{version = ">=18.0.0", python = "==3.13"},
    {version = ">=24.0.0", python = "==3.14"}
]
pydata-sphinx-theme = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-sitemap = "*"


[tool.poetry.group.test.dependencies]
pytest = [
    {version = "==7.0.0", python = "==3.10"},  # done
	{version = "==7.0.0", python = "==3.11"},  # done
	{version = "==7.0.0", python = "==3.12"},  # done
	{version = "==7.0.0", python = "==3.13"},  # done
    {version = "==8.0.0", python = "==3.14"}   # 7.2.0 was working (???).... was up to 7.3.2
]
pytest-cov = "*"
pytest-html = "*"


[tool.poetry.extras]
# Optional dependencies. They can be opted into by apps.


[tool.poetry.scripts]


[tool.poetry.plugins]


[tool.poetry.urls]
Homepage = "https://github.com/PylarBear/pybear"
Documentation = "https://pybear.readthedocs.io/en/stable/"


[tool.coverage.run]
source = ["pybear"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


